--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,5 @@ python-env-tools/**
 python_files/tests/*/.data/.coverage*
 python_files/tests/*/.data/*/.coverage*
 src/testTestingRootWkspc/coverageWorkspace/.coverage
+
+data/*
