feat: add trend models template and update .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -65,6 +65,6 @@ data/*
 data_processed/*
 strategies/*
 !strategies/algorithms_template.py
+!strategies/trend_models_template.py
 !strategies/backtest_engine.py
 .cursorrules
-assets.json
